[package]
name = "rustcoinbase"
version = "0.1.0"
authors = ["Gavin Hurlbut <gjhurlbu@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
futures = "0.3"
log = "0.4"
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
rand = "0.8"
serde_cbor = "0.11.2"
serde_derive = { version = "1.0.14", default-features = false }
serde = { version = "1.0.14", default-features = false }
tarpc = { version = "0.27.2", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json", "cbor"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"
tracing = { version = "0.1" }

[lib]
name = "p2pservice"
path = "src/p2pservice.rs"

[[bin]]
name = "p2pserver"
path = "src/p2pserver.rs"

[[bin]]
name = "p2pclient"
path = "src/p2pclient.rs"
