[package]
name = "rustcoinbase"
version = "0.1.0"
authors = ["Gavin Hurlbut <gjhurlbu@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.4"
futures = "0.3"
log = "0.4"
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
rand = "0.8"
serde_cbor = "0.11"
serde_derive = { version = "1.0", default-features = false }
serde = { version = "1.0", default-features = false }
sled = "0.34"
tarpc = { version = "0.27", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json", "cbor"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tracing-opentelemetry = "0.15"
tracing-subscriber = "0.2"
tracing = { version = "0.1" }
